Fix some alignment issues and modifydesktop view

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 div {
-  /*border: 1px solid red;*/
+  /* border: 1px solid red; */
+}
+
+html {
+  background-color: #7600ed;
+}
+
+.App-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .App {
   text-align: center;
   padding: 10px;
-  background-color: #7600ed;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 1000px) {
+  .App {
+    width: 40%
+  }
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 50px;
 }
 
 .App-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   background-color: #7600ed;
-  /* height: 225px; */
-  padding: 20px 20px 0px 20px;
-  color: white;
+  padding: 20px;
   border-radius: 10px;
   margin: 10px;
+  color: white;
+}
+
+h1 {
+  color: white;
+  font-size: x-large;
 }
 
 .App-title {
-  font-size: 2em;
-}
-
-.Lands-title {
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
